improve(deps): Upgrade rebar3_run to 0.2.3

--- a/rebar.config
+++ b/rebar.config
@@ -162,7 +162,7 @@
 
 {plugins, [
   {relup_helper, {git, "https://github.com/emqx/relup_helper", {branch, "master"}}},
-  rebar3_run
+  {rebar3_run, {git, "https://github.com/emqx/rebar3_run", {tag, "0.2.3"}}}
 ]}.
 
 {provider_hooks, [
