feature(telemetry): add telemetry dependency and load it by default

--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
   emqx_web_hook,
   emqx_recon,
   emqx_rule_engine,
-  emqx_sasl
+  emqx_sasl,
+  emqx_telemetry
  ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -78,7 +79,8 @@
     {emqx_web_hook, load},
     {emqx_recon, load},
     {emqx_rule_engine, load},
-    {emqx_sasl, load}
+    {emqx_sasl, load},
+    {emqx_telemetry, load}
    ]},
   {overlay,
    [{mkdir,"etc/"},
