fix(relup): move emqx_vars to releases

--- a/rebar.config
+++ b/rebar.config
@@ -89,8 +89,8 @@
     {mkdir,"data/mnesia"},
     {mkdir,"data/configs"},
     {mkdir,"data/scripts"},
+    {template,"data/emqx_vars","releases/emqx_vars"},
     {template,"bin/emqx_env","bin/emqx_env"},
-    {template,"bin/emqx_vars","bin/emqx_vars"},
     {copy,"bin/emqx","bin/emqx"},
     {copy,"bin/emqx_ctl","bin/emqx_ctl"},
     {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript"},
