fix(relup): upgrade more scripts

--- a/rebar.config
+++ b/rebar.config
@@ -109,10 +109,12 @@
     {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
+    {copy,"bin/nodetool","bin/nodetool-{{rel_vsn}}"},
     {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
-    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"}
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"},
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/cuttlefish-{{rel_vsn}}"}
    ]}
  ]}.
 
