--- a/rebar.config
+++ b/rebar.config
@@ -89,10 +89,14 @@
     {mkdir,"data/mnesia"},
     {mkdir,"data/configs"},
     {mkdir,"data/scripts"},
+    {template,"data/emqx_vars","releases/emqx_vars"},
     {template,"bin/emqx_env","bin/emqx_env"},
-    {template,"bin/emqx","bin/emqx"},
-    {template,"bin/emqx","bin/emqx-{{rel_vsn}}"}, %% for relup
-    {template,"bin/emqx_ctl","bin/emqx_ctl"},
+    {copy,"bin/emqx","bin/emqx"},
+    {copy,"bin/emqx_ctl","bin/emqx_ctl"},
+    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript"},
+    {copy,"bin/emqx","bin/emqx-{{rel_vsn}}"}, %% for relup
+    {copy,"bin/emqx_ctl","bin/emqx_ctl-{{rel_vsn}}"}, %% for relup
+    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript-{{rel_vsn}}"}, %% for relup
     {template,"bin/emqx.cmd","bin/emqx.cmd"},
     {template,"bin/emqx_ctl.cmd","bin/emqx_ctl.cmd"},
     {copy,"{{output_dir}}/../../conf/plugins","etc/"},
@@ -105,11 +109,12 @@
     {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
+    {copy,"bin/nodetool","bin/nodetool-{{rel_vsn}}"},
     {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
-    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
-    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"}
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"},
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/cuttlefish-{{rel_vsn}}"}
    ]}
  ]}.
 
