chore(emqx): Add emqx as submodule
but not subtree because we will likely push a lot from here

--- a/rebar.config
+++ b/rebar.config
@@ -1,41 +1,12 @@
 %% NOTE: Order of the deps matters!
 {elixir_deps, []}.
 
-{deps,
- [emqx,
-  emqx_retainer,
-  emqx_management,
-  emqx_dashboard,
-  emqx_bridge_mqtt,
-  emqx_sn,
-  emqx_coap,
-  emqx_stomp,
-  emqx_auth_http,
-  emqx_auth_jwt,
-  emqx_auth_mysql,
-  emqx_auth_mnesia,
-  emqx_web_hook,
-  emqx_recon,
-  emqx_rule_engine,
-  emqx_sasl,
-  emqx_telemetry
- ]}.
+{project_app_dirs, ["emqx", "emqx/apps/*"]}.
+
+{deps, [ ]}.
 
 %% Added to deps list for 'cloud' profile
-{cloud_deps,
- [emqx_lwm2m,
-  emqx_auth_ldap,
-  emqx_auth_pgsql,
-  emqx_auth_redis,
-  emqx_auth_mongo,
-  emqx_lua_hook,
-  emqx_prometheus,
-  emqx_reloader,
-  emqx_psk_file,
-  emqx_extension_hook,
-  emqx_exproto,
-  emqx_plugin_template
- ]}.
+{cloud_deps, [ ]}.
 
 {edge_deps, []}.
 
@@ -125,10 +96,9 @@
   {emqx_auth_redis, load},
   {emqx_auth_mongo, load},
   {emqx_lua_hook, load},
-  {emqx_extension_hook, load},
+  {emqx_exhook, load},
   {emqx_exproto, load},
   {emqx_prometheus, load},
-  {emqx_reloader, load},
   {emqx_psk_file, load},
   {emqx_plugin_template, load},
   {observer, load},
@@ -139,7 +109,7 @@
 {cloud_relx_overlay,
  [{template,"{{output_dir}}/../../conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
-  {template,"{{output_dir}}/../../conf/plugins/emqx_extension_hook.conf", "etc/plugins/emqx_extension_hook.conf"},
+  {template,"{{output_dir}}/../../conf/plugins/emqx_exhook.conf", "etc/plugins/emqx_exhook.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_exproto.conf", "etc/plugins/emqx_exproto.conf"},
   {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"},
   {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
