refactor(build): Rewrite post-compile script with escript

--- a/rebar.config
+++ b/rebar.config
@@ -111,8 +111,8 @@
   {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_exhook.conf", "etc/plugins/emqx_exhook.conf"},
   {template,"{{output_dir}}/../../conf/plugins/emqx_exproto.conf", "etc/plugins/emqx_exproto.conf"},
-  {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"},
-  {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
+  {copy,"{{output_dir}}/../../lib/emqx_lwm2m/src/../lwm2m_xml","etc/"},
+  {copy, "{{output_dir}}/../../lib/emqx_psk_file/src/../etc/psk.txt", "etc/psk.txt"}
  ]}.
 
 {edge_relx_overlay, []}.
@@ -145,6 +145,5 @@
 ]}.
 
 {post_hooks,
- [{"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"},
-  {"win32", compile, "post-compile.cmd"}
+ [{compile, "./post-compile.escript"}
  ]}.
