--- a/.github/workflows/build_cross_packages.yaml
+++ b/.github/workflows/build_cross_packages.yaml
@@ -13,16 +13,22 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: ilammy/msvc-dev-cmd@v1
+    - uses: gleam-lang/setup-erlang@v1.1.0
+      id: install_erlang
+      with:
+        otp-version: 22.3
     - name: build
       run: |
-        set-executionpolicy remotesigned -s cu
-        iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
-        scoop bucket add extras https://github.com/lukesampson/scoop-extras.git
-        scoop bucket add java
-        scoop update
-        scoop install sudo curl 7zip ojdkbuild8 vcredist2013
-        scoop install erlang@22.3
+        #     set-executionpolicy remotesigned -s cu
+        #     iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
+        #     # $env:path + ";" + $env:USERPROFILE + "\scoop\shims" + ';C:\Program Files\erl10.4\bin'
+        #     [environment]::SetEnvironmentvariable("Path", ";" + $env:USERPROFILE + "\scoop\shims")
+        #     [environment]::SetEnvironmentvariable("Path", ';C:\Program Files\erl10.4\bin')
+        #     scoop bucket add extras https://github.com/lukesampson/scoop-extras.git
+        #     scoop update
+        #     scoop install sudo curl vcredist2013
+
+        $env:PATH = "${{ steps.install_erlang.outputs.erlpath }}\bin;$env:PATH"
 
         $version = $( "${{ github.ref }}" -replace "^(.*)/(.*)/" )
         if ($version -match "^v[0-9]+\.[0-9]+(\.[0-9]+)?") {
@@ -111,7 +117,7 @@ jobs:
         sudo systemctl restart docker
         docker info
         docker buildx create --use --name mybuild
-        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        docker run --rm --privileged tonistiigi/binfmt --install all
     - uses: actions/checkout@v1
     - name: get deps
       run: |
