--- a/.github/workflows/build_cross_packages.yaml
+++ b/.github/workflows/build_cross_packages.yaml
@@ -125,8 +125,9 @@ jobs:
             -e GITHUB_RUN_ID=$GITHUB_RUN_ID \
             -e GITHUB_REF=$GITHUB_REF \
             -v $(pwd):/emqx-rel \
+            -w /emqx-rel \
             emqx/build-env:erl22.3-debian10 \
-            bash -c "make -C /emqx-rel deps-all"
+            bash -c "make deps-all"
     - name: downloads emqx zip packages
       env:
         SYSTEM: ${{ matrix.os }}
@@ -255,8 +256,9 @@ jobs:
             -e GITHUB_RUN_ID=$GITHUB_RUN_ID \
             -e GITHUB_REF=$GITHUB_REF \
             -v $(pwd):/emqx-rel \
+            -w /emqx-rel \
             emqx/build-env:erl22.3-alpine-amd64 \
-            sh -c "make -C /emqx-rel deps-emqx"
+            sh -c "make deps-emqx"
     - name: build emqx docker image
       env:
         ARCH: ${{ matrix.arch[0] }}
@@ -365,13 +367,14 @@ jobs:
         set -e -x -u
         version=$(echo ${{ github.ref }} | sed -r  "s ^refs/heads/|^refs/tags/(.*) \1 g")
         if [ ! -z $(echo $version | grep -oE "^[ev0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
-          sudo make -C emqx-rel docker-prepare
+          cd emqx-rel
+          sudo make docker-prepare
           cd ./packages && for var in $(ls |grep docker |grep -v sha256); do unzip $var; sudo docker load < ${var%.*}; rm -f ${var%.*}; done && cd -
           echo ${{ secrets.DOCKER_HUB_TOKEN }} |sudo docker login -u ${{ secrets.DOCKER_HUB_USER }} --password-stdin
-          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx make -C emqx-rel docker-push
-          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx make -C emqx-rel docker-manifest-list
-          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge make -C emqx-rel docker-push
-          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge make -C emqx-rel docker-manifest-list
+          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx make docker-push
+          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx make docker-manifest-list
+          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge make docker-push
+          sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge make docker-manifest-list
         fi
     - name: update repo.emqx.io
       run: |
