--- a/.github/workflows/run_deps_tests.yaml
+++ b/.github/workflows/run_deps_tests.yaml
@@ -29,10 +29,11 @@ jobs:
             docker run -i --rm \
                 -e EMQX_DEPS_DEFAULT_VSN=$version \
                 -v $(pwd):/emqx-rel \
+                -w /emqx-rel \
                 emqx/build-env:erl22.3-debian10 \
-                bash -c "make -C /emqx-rel deps-emqx"
+                bash -c "make deps-emqx"
         - name: Install docker-compose
-          run: | 
+          run: |
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
         - name: docker-compose build
@@ -50,7 +51,7 @@ jobs:
             sudo chmod -R 777 ./emqx*/etc
             for var in $(ls |grep emqx); do
               if [ $var == "emqx_auth_mysql" ];then
-                sed -i "/auth.mysql.server/c auth.mysql.server = mysql_server:3306" ./$var/etc/emqx_auth_mysql.conf 
+                sed -i "/auth.mysql.server/c auth.mysql.server = mysql_server:3306" ./$var/etc/emqx_auth_mysql.conf
                 echo "auth.mysql.username = root" >> ./$var/etc/emqx_auth_mysql.conf
                 echo "auth.mysql.password = public" >> ./$var/etc/emqx_auth_mysql.conf
                 echo "auth.mysql.ssl.cafile =   /emqx-rel/_build/emqx/lib/emqx_auth_mysql/test/emqx_auth_mysql_SUITE_data/ca.pem" >> ./$var/etc/emqx_auth_mysql.conf
@@ -72,7 +73,7 @@ jobs:
             done
             cd -
         - name: run all test cases
-          run: docker exec emqx_auto_func_test_emqx_1 bash -c "make -C /emqx-rel ct -k"
+          run: docker exec emqx_auto_func_test_emqx_1 bash -c "make ct -k"
         - name: get the results
           if: always()
           run: docker exec emqx_auto_func_test_python_1 bash -c "pip install --upgrade pip && pip install beautifulsoup4 && cd /emqx-rel/tests && python /emqx-rel/.ci/deps_tests/boot.py"
