--- a/.github/workflows/run_paho_tests.yaml
+++ b/.github/workflows/run_paho_tests.yaml
@@ -1,6 +1,6 @@
 name: Run paho tests
 
-on: 
+on:
   push:
     tags:
       - v*
@@ -19,7 +19,7 @@ jobs:
 
         steps:
         - name: Install docker-compose
-          run: | 
+          run: |
             sudo curl -L "https://github.com/docker/compose/releases/download/1.25.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
         - uses: actions/checkout@v1
@@ -36,8 +36,9 @@ jobs:
             docker run -i --rm \
               -e EMQX_DEPS_DEFAULT_VSN=$version \
               -v $(pwd):/emqx-rel \
+              -w /emqx-rel \
               emqx/build-env:erl22.3-debian10 \
-              bash -c "make -C /emqx-rel deps-emqx"
+              bash -c "make deps-emqx"
         - name: make emqx image
           run: TARGET=emqx/emqx make docker-build
         - name: make paho tests
