fix(relx): rel_vsn renamed to release_version

--- a/rebar.config
+++ b/rebar.config
@@ -61,9 +61,9 @@
     {copy,"bin/emqx","bin/emqx"},
     {copy,"bin/emqx_ctl","bin/emqx_ctl"},
     {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript"},
-    {copy,"bin/emqx","bin/emqx-{{rel_vsn}}"}, %% for relup
-    {copy,"bin/emqx_ctl","bin/emqx_ctl-{{rel_vsn}}"}, %% for relup
-    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript-{{rel_vsn}}"}, %% for relup
+    {copy,"bin/emqx","bin/emqx-{{ release_version }}"}, %% for relup
+    {copy,"bin/emqx_ctl","bin/emqx_ctl-{{ release_version }}"}, %% for relup
+    {copy,"bin/install_upgrade.escript", "bin/install_upgrade.escript-{{ release_version }}"}, %% for relup
     {template,"bin/emqx.cmd","bin/emqx.cmd"},
     {template,"bin/emqx_ctl.cmd","bin/emqx_ctl.cmd"},
     {copy,"{{output_dir}}/../../conf/plugins","etc/"},
@@ -76,12 +76,12 @@
     {template, "data/loaded_modules.tmpl", "data/loaded_modules"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
     {copy,"bin/nodetool","bin/nodetool"},
-    {copy,"bin/nodetool","bin/nodetool-{{rel_vsn}}"},
-    {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{rel_vsn}}/"},
+    {copy,"bin/nodetool","bin/nodetool-{{ release_version }}"},
+    {copy,"{{output_dir}}/../../conf/schema/emqx.schema","releases/{{ release_version }}/"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
     {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"},
-    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/cuttlefish-{{rel_vsn}}"}
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/cuttlefish-{{ release_version }}"}
    ]}
  ]}.
 
