--- a/.github/workflows/run_deps_tests.yaml
+++ b/.github/workflows/run_deps_tests.yaml
@@ -73,7 +73,7 @@ jobs:
             done
             cd -
         - name: run all test cases
-          run: docker exec emqx_auto_func_test_emqx_1 bash -c "make ct -k"
+          run: docker exec emqx_auto_func_test_emqx_1 bash -c "make -C /emqx-rel ct -k"
         - name: get the results
           if: always()
           run: docker exec emqx_auto_func_test_python_1 bash -c "pip install --upgrade pip && pip install beautifulsoup4 && cd /emqx-rel/tests && python /emqx-rel/.ci/deps_tests/boot.py"
