--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
 {elixir_deps, []}.
 
 {deps,
- [emqx,
+ [{emqx_backend_timescale, {git, "https://github.com/commbat/emqx-backend-timescale.git", {tag, "v4.2.5"}}},
+  emqx,
   emqx_retainer,
   emqx_management,
   emqx_dashboard,
@@ -79,6 +80,7 @@
     {emqx_web_hook, load},
     {emqx_recon, load},
     {emqx_rule_engine, load},
+    {emqx_backend_timescale, load},
     {emqx_sasl, load},
     {emqx_telemetry, load}
    ]},
