chore(CI): update workflows

--- a/.github/workflows/build_packages.yaml
+++ b/.github/workflows/build_packages.yaml
@@ -16,15 +16,15 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: ilammy/msvc-dev-cmd@v1
+    - uses: gleam-lang/setup-erlang@v1.1.0
+      id: install_erlang
+      with:
+        otp-version: 22.1
     - name: build
       run: |
+        $env:PATH = "${{ steps.install_erlang.outputs.erlpath }}\bin;$env:PATH"
         $version = $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
         $env:EMQX_DEPS_DEFAULT_VSN = $version
-        set-executionpolicy remotesigned -s cu
-        iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop bucket add extras https://github.com/lukesampson/scoop-extras.git
-        scoop install sudo curl 7zip aws erlang vcredist2013
-        $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
         make deps-emqx
         $rebar3 = $env:USERPROFILE + "\rebar3"
         (New-Object System.Net.WebClient).DownloadFile('https://s3.amazonaws.com/rebar3/rebar3', $rebar3)
@@ -36,15 +36,15 @@ jobs:
         $pkg_name = "emqx-windows-$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g').zip"
         Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/$pkg_name
         mv _build/emqx/rel/$pkg_name _packages/emqx
-        sudo ./_build/emqx/rel/emqx/bin/emqx start
-        sudo ./_build/emqx/rel/emqx/bin/emqx stop
-        sudo ./_build/emqx/rel/emqx/bin/emqx install
-        sudo ./_build/emqx/rel/emqx/bin/emqx uninstall
+        ./_build/emqx/rel/emqx/bin/emqx start
+        ./_build/emqx/rel/emqx/bin/emqx stop
+        ./_build/emqx/rel/emqx/bin/emqx install
+        ./_build/emqx/rel/emqx/bin/emqx uninstall
         Get-FileHash -Path "_packages/emqx/$pkg_name" | Format-List | grep 'Hash' | awk '{print $3}'  > _packages/emqx/$pkg_name.sha256
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
-        aws configure set default.region us-west-2
-        aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
+        aws s3 cp --recursive ./_packages/emqx s3://${{ secrets.AWS_S3_BUCKET }}/emqx-ce/$("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
 
   # mac:
   #   runs-on: macos-latest
@@ -73,7 +73,7 @@ jobs:
   #       ./_build/emqx/rel/emqx/bin/emqx start
   #       ./_build/emqx/rel/emqx/bin/emqx stop
   #       openssl dgst -sha256 ./_packages/emqx/emqx-macosx-$version.zip | awk '{print $2}'  > ./_packages/emqx/emqx-macosx-$version.zip.sha256
-  #       aws2 s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
+  #       aws2 s3 cp --recursive ./_packages/emqx  s3://${{ secrets.AWS_S3_BUCKET }}/emqx-ce/$version
 
   linux:
     runs-on: ubuntu-latest
@@ -98,12 +98,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: set aws
       run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
-        aws configure set default.region us-west-2
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
     - name: build emqx packages
       env:
         ERL_OTP: erl22.1
@@ -114,8 +111,8 @@ jobs:
         sudo docker run -i --name $SYSTEM-build -e EMQX_DEPS_DEFAULT_VSN=$version -e SYSTEM=$SYSTEM -v $(pwd):/emqx-rel emqx/build-env:$ERL_OTP-$SYSTEM sh -c "cd /emqx-rel/.github/workflows/script; if [ -z $(echo $SYSTEM | grep -o raspbian) ];then EMQX_NAME=emqx ./build.sh; fi; EMQX_NAME=emqx-edge ./build.sh"
         cd _packages/emqx && for var in $(ls emqx-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
         cd _packages/emqx-edge/&& for var in $(ls emqx-edge-$SYSTEM-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
-        [ -d _packages/emqx ] && aws s3 cp --recursive ./_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
-        [ -d _packages/emqx-edge ] && aws s3 cp --recursive ./_packages/emqx-edge s3://packages.emqx.io/emqx-edge/$version
+        [ -d _packages/emqx ] && aws s3 cp --recursive ./_packages/emqx  s3://${{ secrets.AWS_S3_BUCKET }}/emqx-ce/$version
+        [ -d _packages/emqx-edge ] && aws s3 cp --recursive ./_packages/emqx-edge s3://${{ secrets.AWS_S3_BUCKET }}/emqx-edge/$version
 
   docker:
     runs-on: ubuntu-latest
@@ -132,12 +129,9 @@ jobs:
     steps:
     - name: set aws
       run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
-        aws configure set default.region us-west-2
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
     - uses: actions/checkout@v2
       with: 
         path: emqx-rel
@@ -160,11 +154,11 @@ jobs:
         sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH  make -C emqx-rel/deploy/docker
         sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH make -C emqx-rel/deploy/docker save
         cd emqx-rel/_packages/emqx && for var in $(ls emqx-docker-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
-        aws s3 cp --recursive emqx-rel/_packages/emqx  s3://packages.emqx.io/emqx-ce/$version
+        aws s3 cp --recursive emqx-rel/_packages/emqx  s3://${{ secrets.AWS_S3_BUCKET }}/emqx-ce/$version
         sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH  make -C emqx-rel/deploy/docker
         sudo EMQX_DEPS_DEFAULT_VSN=$version TARGET=emqx/emqx-edge ARCH=$ARCH QEMU_ARCH=$QEMU_ARCH  make -C emqx-rel/deploy/docker save
         cd emqx-rel/_packages/emqx-edge && for var in $(ls emqx-edge-docker-* ); do sudo bash -c "echo $(sha256sum $var | awk '{print $1}') > $var.sha256"; done && cd -
-        aws s3 cp --recursive emqx-rel/_packages/emqx-edge s3://packages.emqx.io/emqx-edge/$version
+        aws s3 cp --recursive emqx-rel/_packages/emqx-edge s3://${{ secrets.AWS_S3_BUCKET }}/emqx-edge/$version
     - name: docker test
       if: matrix.arch[0] == 'amd64'
       run: |
@@ -181,20 +175,17 @@ jobs:
     steps:
     - name: set aws
       run: |
-        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
-        aws configure set aws_access_key_id ${{ secrets.AwsAccessKeyId }}
-        aws configure set aws_secret_access_key ${{ secrets.AwsSecretAccessKey }}
-        aws configure set default.region us-west-2
+        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws configure set default.region ${{ secrets.AWS_DEFAULT_REGION }}
     - name: install dos2unix
       run: sudo apt-get update && sudo apt install -y dos2unix
     - name: get packages
       run: |
         if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
         mkdir -p packages
-        aws s3 cp --recursive s3://packages.emqx.io/emqx-ce/$version ./packages
-        aws s3 cp --recursive s3://packages.emqx.io/emqx-edge/$version ./packages
+        aws s3 cp --recursive s3://${{ secrets.AWS_S3_BUCKET }}/emqx-ce/$version ./packages
+        aws s3 cp --recursive s3://${{ secrets.AWS_S3_BUCKET }}/emqx-edge/$version ./packages
         cd packages && for var in $( ls |grep emqx |grep -v sha256); do 
           dos2unix $var.sha256
           echo "$(cat $var.sha256) $var" | sha256sum -c || exit 1
@@ -208,10 +199,21 @@ jobs:
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
           cd packages
           for var in $(ls); do
-            ../emqx-rel/.github/workflows/script/upload_github_release_asset.sh owner=emqx repo=emqx tag=$version filename=$var github_api_token=$(echo ${{ secrets.AccessToken }})
+            ../emqx-rel/.github/workflows/script/upload_github_release_asset.sh \
+              owner=emqx \
+              repo=emqx \
+              tag=$version \
+              filename=$var \
+              github_api_token=$(echo ${{ secrets.CI_GIT_TOKEN }})
           done
-          aws cloudfront create-invalidation --distribution-id E3TYD0WSP4S14P --paths "/emqx-ce/$version/*,/emqx-edge/$version/*"
-          curl -w %{http_code} --insecure -H ${{ secrets.EmqxHeader }} https://admin.emqx.io/api/v1/github_release_callback?tag=$version
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_ID }} --paths "/emqx-ce/$version/*,/emqx-edge/$version/*"
+          curl -w %{http_code} \
+            --insecure \
+            -H "Content-Type: application/json" \
+            -H "token: ${{ secrets.EMQX_IO_TOKEN }}" \
+            -X POST \
+            -d "{\"repo\":\"emqx/emqx\", \"tag\": \"$version\" }" \
+            ${{ secrets.EMQX_IO_RELEASE_API }}
         fi
     - name: push docker image to docker hub
       run: |
@@ -227,7 +229,12 @@ jobs:
       run: |
         if [ ${{ github.event_name}} == 'repository_dispatch' ]; then version=${{ github.event.client_payload.version }}; else version=$(echo ${{ github.ref }} | sed -r  "s .*/.*/(.*) \1 g"); fi
         if [ ! -z $(echo $version | grep -oE "v[0-9]+\.[0-9]+(\.[0-9]+)?") ]; then
-          curl -H "Authorization: token ${{ secrets.AccessToken }}" -H "Accept: application/vnd.github.everest-preview+json" -H "Content-Type: application/json" -X POST -d "{\"event_type\":\"update_repos\",\"client_payload\":{\"version\": \"$version\",\"emqx_ce\":true,\"emqx_ee\":false}}" https://api.github.com/repos/emqx/emqx-packages-docker/dispatches
+          curl --silent --show-error \
+            -H "Authorization: token ${{ secrets.CI_GIT_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            -X POST \
+            -d "{\"ref\":\"v1.0.1\",\"inputs\":{\"version\": \"$version\", \"emqx_ce\": \"true\"}}" \
+            "https://api.github.com/repos/emqx/emqx-ci-helper/actions/workflows/update_emqx_repos.yaml/dispatches"
         fi
     # - name: update homebrew packages
     #   run: |
